NCL-6314 - build agent file transfer retry.